[tool]
[tool.poetry]
name = "horos_io"
version = "0.1.2.4"
homepage = "https://github.com/santomon/horos_io"
description = "small package to deal with data exported from Horos"
authors = ["Quang Anh Le Hong <qa12_8@yahoo.de>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "horos_io" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
click = "*"
pandas = "^1.4.4"
pydicom = "^2.3.0"
matplotlib = "^3.5.3"
scipy = "^1.9.1"
tk = "^0.1.0"
opencv-python = "^4.6.0.66"
tqdm = "^4.64.1"
decorator = "^5.1.1"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]
horos_io = 'horos_io.cli:main'

[tool.poetry.group.dev.dependencies]
urllib3 = "^1.26.12"
requests = "^2.28.1"
twine = "^4.0.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
